--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,6 +3,10 @@ html, body {
   height: 100%;
 }
 
+body {
+  padding-bottom: 0em !important;
+}
+
 .container {
 	max-width: 1200px;
 	width: 100%;
@@ -62,7 +66,7 @@ footer {
 
 .tile {
 	border: 1px solid black;
-	background-color: white; 
+	background-color: white;
 	border-radius: 20px;
 	width: 300px;
 	margin: 5px 5px;
